@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+utils/mapper.c: fix compilation. Fix exit without path not displayed.
+Nicolas Weeger 2007-06-10
+
 Remove obsolete player_cmd().
  doc/Developers/protocol
  include/sockproto.h
